XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>

* Make the match selected in the incremental find/replace. Issue #297.
* Bug fix in the replace implementation. Adding separate button 'replace and
  move'. Issue #277.
* Making Ctrl+F and Ctrl+R select the text to search even if the widget has
  already been displayed. Issue #291.
* Making Ctrl+X a synonym to Shift+Del. Issue #290.
* Bug fix: F3/Shift F3 now work for the find/replace search string depending of
  what dialog was shown last. Issue #289.
* Updating the help screen. Issue #281.
* Updating the welcome screen. Issue #279.
* Making Shift+Home/End select till the beginning/end of a visible line.
  Issue #286.
* Adding support for Alt+Shift+Left/Right - select a word part. Issue #287.
* Adding support for Alt+Shift+Up/Down - select till the beginning/end of a
  paragraph. Issue #288.
* Adding support for Shift+Del - copy to a buffer and delete a selected text
  (if so) or the current line. Issue #285.
* Making HOME/END jumping to the beginning/end of the visible line. Issue #284.
* Adding support for Alt+Up and Alt+Down hot keys
* Switching history hot keys to Alt+PgDown and Alt+PgUp
* Adding support for Alt+Left and Alt+Right hot keys
* Bug fix: check that all the modified files are saved before letting a new
  project to be created. Issue #273.
* Move the focus to the text editor if the focus was not in the editor and the
  currently active tab is clicked. Issue #264.

2011 Oct 19  Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 1.2
* Adding support for commenting/uncommenting a single line or selected lines.
  Issue #11.
* Adding support for Shift+Tab in the text editor: dedent a line or the selected
  lines. Issue #282.
* Making the format string for modified files configurable. The default value
  is "%s *". Issue #280.
* Making autoindent switched on by default. Issue #279.
* Do not set the font size explicitly in the simple line counter window.